[package]
name = "tear8"
version = "0.1.0"
edition = "2021"
authors = ["MS-Code <catmh.ms@gmail.com>"]
description = "Tear is a Rust library that enables you to create your own fantasy console using winit and pixels."
license = "MIT"
documentation = "https://github.com/DevMsCode/Tear/"
homepage = "https://github.com/DevMsCode/Tear/"
repository = "https://github.com/DevMsCode/Tear/"

[dependencies]
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
console = "0.15.7"
chrono = "0.4.31"
